Restructuring code - basic level classifier

--- a/retinal_segmentation/gui/retinal-segmentation.ipynb
+++ b/retinal_segmentation/gui/retinal-segmentation.ipynb
@@ -52,7 +52,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from ..utils import statistics"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
