KNN: incomplete feature extraction

--- a/retinal_segmentation/gui/retinal-segmentation.ipynb
+++ b/retinal_segmentation/gui/retinal-segmentation.ipynb
@@ -90,7 +90,12 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import os\n",
+    "from retinal_segmentation.basic_level_classifier.knn import \\\n",
+    "    load_sliced_images, get_input_features, get_target_vals, init_knn_classifier\n",
+    "from sklearn.model_selection import train_test_split"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -99,14 +104,28 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "## Deep learning network"
+    "data_dir, target_dir = \\\n",
+    "        f\"{os.getcwd()}/retinal_segmentation/resource/images\", \\\n",
+    "        f\"{os.getcwd()}/retinal_segmentation/resource/labels\"\n",
+    "slice_size = 10\n",
+    "\n",
+    "data_images, target_images = load_sliced_images(data_dir, target_dir)\n",
+    "\n",
+    "data, target = get_input_features(data_images), get_target_vals(target_images)\n",
+    "\n",
+    "train_data, test_data, train_target_images, test_target = \\\n",
+    "        train_test_split(data, target, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# classifier = init_knn_classifier(train_data, train_target)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   },
