KNN: working prediction for slices

--- a/retinal_segmentation/gui/retinal-segmentation-transformations.ipynb
+++ b/retinal_segmentation/gui/retinal-segmentation-transformations.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "c09315d1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Wykrywanie naczyń dna siatkówki oka"
    ]
