--- a/retinal_segmentation/gui/segmentation.ipynb
+++ b/retinal_segmentation/gui/segmentation.ipynb
@@ -48,6 +48,9 @@
       "displayName": "Alex Terentowicz",
       "userId": "10722644937446686009"
      }
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "execution_count": 17,
@@ -195,6 +198,9 @@
       "displayName": "Alex Terentowicz",
       "userId": "10722644937446686009"
      }
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "execution_count": 2,
@@ -214,6 +220,9 @@
       "displayName": "Alex Terentowicz",
       "userId": "10722644937446686009"
      }
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -348,6 +357,9 @@
       "displayName": "Alex Terentowicz",
       "userId": "10722644937446686009"
      }
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "execution_count": 4,
@@ -391,7 +403,10 @@
       "userId": "10722644937446686009"
      }
     },
-    "outputId": "1b082744-03fb-427e-e46a-f9817a88455b"
+    "outputId": "1b082744-03fb-427e-e46a-f9817a88455b",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "execution_count": 6,
    "outputs": [
@@ -438,6 +453,9 @@
       "displayName": "Alex Terentowicz",
       "userId": "10722644937446686009"
      }
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "execution_count": 13,
@@ -464,7 +482,10 @@
       "userId": "10722644937446686009"
      }
     },
-    "outputId": "06646849-b104-4742-c8e2-f02d7c71d405"
+    "outputId": "06646849-b104-4742-c8e2-f02d7c71d405",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "execution_count": 32,
    "outputs": [
@@ -504,7 +525,10 @@
       "userId": "10722644937446686009"
      }
     },
-    "outputId": "46edc9e3-43e2-4649-be7a-4df2c1467f81"
+    "outputId": "46edc9e3-43e2-4649-be7a-4df2c1467f81",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "execution_count": 23,
    "outputs": [
